@@ -1,5 +1,3 @@
-* test without DateTime available
-
 * pass zone name through to DT:TZ:SystemV (requiring new version)
 
 * include the local time and zone name in error message about non-existent local time (matching DT:TZ:SystemV)
